Change java GC settings